# stuff

./: .gitignore  Cargo.toml  Main.hs  Main.java  README.MD  README.md  Standalone.hs  cabal.project  cabal.project.local  default.nix  fix-to-dhall.cabal  flake.nix  hls-allocatestack-bug.cabal  repro.sh  shell.nix  stuff.cabal  test.cabal  weeder.dhall
.github/workflows/: ci.yml  test.yml
238f15b285d4e95f0718b9f979245785a483c0c2/: ghc-lib-parser.cabal
238f15b285d4e95f0718b9f979245785a483c0c2/compiler/: ghc-llvm-version.h
9.4.1-alpha1/: ghc-lib-parser.cabal
9.4.1-alpha3/: ghc-lib-parser.cabal
app/: Dep.hs  Main.hs  expr.dhall  foo.txt
app/Words/: Haskell.hs  Hello.hs
b/: README.md
foo/: index.html
ghc-lib-parser-8.10.3.20201220/: ghc-lib-parser.cabal
ghc-lib-parser-8.10.5.20210606/: ghc-lib-parser.cabal
ghc-lib-parser-9.0.1.20210324/: ghc-lib-parser.cabal
ghc-lib-parser-9.10.1-alpha1/: ghc-lib-parser.cabal
ghc-lib-parser-9.10.1-alpha1/compiler/: ghc.cabal
ghc-lib-parser-9.10.1-alpha1/ghc/: ghc-bin.cabal
ghc-lib-parser-9.12.1.20241016/: ghc-lib-parser.cabal
ghc-lib-parser-9.12.1.20241016/compiler/: ghc.cabal
ghc-lib-parser-9.4.1-rc1/: ghc-lib-parser.cabal
ghc-lib-parser-9.4.4.20221225/: ghc-lib-parser.cabal
ghc-lib-parser-9.6.1.20230312-wasm/: ghc-lib-parser.cabal
ghc-lib-parser-9.8.1-alpha1/: ghc-lib-parser.cabal
ghc-lib-parser-9.8.1-alpha4/: ghc-lib-parser.cabal
nix/: sources.json
src/: A.hs  AD.hs  B.hs  Lib.hs  MyLib.hs  main.rs
stuff/: stuff.cabal
stuff/test/: Main.hs
test/: Lexer.hs  Main.hs
(+220 files in other folders)
