cabal-version: 2.4
name:          fix-to-dhall
version:       0.1.0.0
author:        amesgen
maintainer:    amesgen@amesgen.de

executable fix-to-dhall
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:
    , base
    , text
    , dhall
    , data-fix
    , string-interpolate

  hs-source-dirs:   app
  default-language: Haskell2010
