cabal-version:      2.4
name:               stuff
version:            0.1.0.0
author:             amesgen
maintainer:         amesgen@amesgen.de
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base, lens
    hs-source-dirs:   src
    default-language: Haskell2010
