cabal-version: 3.0
name: stuff
version: 0.1.0.0

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wunused-packages

  other-modules: Lexer
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends:
    array,
    base,
    bytestring,
    containers,
    ghc,
    ghc-boot,
    text,
